321-484 horizontal scroll fix

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -65,6 +65,34 @@
   }
 }
 
+@media (min-width: 321px) and (max-width: 484px) {
+   .about {
+    padding: 24px 24px 40px;
+  }
+
+  .about__content {
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+    gap: 28px;
+  }
+
+  .about__image {
+    width: 300px;
+    height: 300px;
+  }
+
+  .about__title {
+    font-size: 32px;
+    line-height: 40px;
+    margin-bottom: 18px;
+  }
+
+  .about__text {
+    font-size: 17px;
+    line-height: 24px;
+  }
+}
 
 @media screen and (max-width: 320px) {
   .about__content {
