--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -128,6 +128,42 @@
   }
 }
 
+@media (min-width: 321px) and (max-width: 484px) {
+  .main__content {
+    max-width: 90%;
+    padding: 0 16px;
+    margin-top: 96px;
+  }
+
+  .main__title {
+    font-size: 42px;
+    line-height: 54px;
+    max-width: 320px;
+  }
+
+  .main__subtitle {
+    margin-top: 20px;
+    font-size: 17px;
+  }
+
+   .main__search-form {
+    width: 100%;
+    max-width: 100%;
+    display: flex; /* Ensure the button and input are aligned properly */
+    margin-bottom: 32px;
+  }
+
+  .main__search-btn {
+    width: 100%; /* Keep width as 100% so it fills the form */
+    height: 100%; /* Makes the button fill the form's height */
+  }
+
+  .main__search-input {
+    font-size: 15px;
+    padding-left: 18px;
+  }
+}
+
 
 @media screen and (max-width: 320px) {
   .main__content {
