--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -156,6 +156,36 @@
   }
 }
 
+@media (min-width: 321px) and (max-width: 484px) {
+  .navigation__menu {
+    gap: 24px;
+  }
+
+  .navigation__link {
+    font-size: 15px;
+  }
+
+  .navigation__link_theme_dark.navigation__link_active::after,
+  .navigation__link_theme_light.navigation__link_active::after {
+    bottom: -38px;
+  }
+
+  .navigation__btn_user_desktop,
+  .navigation__link_saved {
+    display: none;
+  }
+
+  .navigation__btn_user_theme_light,
+  .navigation__signin-btn_theme_light,
+  .navigation__btn_user_theme_dark,
+  .navigation__signin-btn_theme_dark {
+    width: 140px;
+    height: 44px;
+    font-size: 15px;
+    padding: 10px 18px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .navigation__menu {
     display: none; 
